# hybrid-array

./: .codecov.yml  CHANGELOG.md  Cargo.toml  README.md  gen_large.py
.github/workflows/: hybrid-array.yml
src/: flatten.rs  from_fn.rs  iter.rs  lib.rs  serde.rs  sizes.rs  traits.rs  wincode.rs  zip.rs
src/sizes/: auto_gen.rs  extra_sizes.rs  macros.rs  mod.rs
tests/: custom_size.rs  mod.rs
