[package]
name = "hybrid-array"
version = "0.4.0-pre"
description = """
Hybrid typenum-based and const generic array types designed to provide the
flexibility of typenum-based expressions while also allowing interoperability
and a transition path to const generics
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hybrid-array"
repository = "https://github.com/RustCrypto/hybrid-array"
categories = ["no-std", "data-structures"]
keywords = ["generic-array"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
typenum = { version = "1.17", features = ["const-generics"] }

# optional dependencies
bytemuck = { version = "1", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }
subtle = { version = "2", optional = true, default-features = false }
zeroize = { version = "1.8", optional = true, default-features = false }

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }

[features]
alloc = []
extra-sizes = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
