[package]
name = "hybrid-array"
version = "0.4.5"
description = """
Hybrid typenum-based and const generic array types designed to provide the
flexibility of typenum-based expressions while also allowing interoperability
and a transition path to const generics
"""
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hybrid-array"
repository = "https://github.com/RustCrypto/hybrid-array"
categories = ["no-std", "data-structures"]
keywords = ["generic-array"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
typenum = { version = "1.17", features = ["const-generics"] }
wincode = { version = "0.2.5" }

# optional dependencies
arbitrary = { version = "1", optional = true }
bytemuck = { version = "1", optional = true, default-features = false }
serde = { version = "1", optional = true, default-features = false }
subtle = { version = "2", optional = true, default-features = false, features = ["const-generics"] }
zeroize = { version = "1.8", optional = true, default-features = false }

[features]
alloc = []
extra-sizes = []
wincode = []


[package.metadata.docs.rs]
all-features = true
